--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,52 +1,44 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %} - Se connecter{% endblock %}
 
-{% block body %}
+{% block content %}
 
     <form method="post">
 
-        <h1 class="my-4"><i class="fas fa-user"></i>&nbsp;Se connecter</h1>
+        {% include 'include/_breadcrumb.html.twig' with {'title': 'Se connecter'} only %}
 
-        {% if error %}
-            <div class="col-12">
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            </div>
-        {% endif %}
+        <section class="section-padding-80">
+            <div class="container">
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as <strong>{{ app.user.username }}</strong>, <a href="{{ path('app_logout') }}">Logout</a>
-            </div>
-        {% endif %}
+                {% if error %}
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        </div>
+                    </div>
+                {% endif %}
 
-        <div>
-            <div class="form-group row">
-                <label class="col-form-label col-sm-2 required" for="inputUsername">Login</label>
-                <div class="col-sm-10"><input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" required autofocus></div>
-            </div>
-            <div class="form-group row">
-                <label class="col-form-label col-sm-2" for="inputPassword">Password</label>
-                <div class="col-sm-10"><div class="custom-file"><input type="password" name="_password" id="inputPassword" class="form-control" required></div>
-            </div>
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-            
-            <div class="col-12 my-3">
-                <div class="text-right">
-                    <button class="btn btn-primary">Valider</button>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-2 required" for="inputUsername">Identifiant</label>
+                            <div class="col-sm-10"><input type="text" value="{{ last_username }}" name="_username" id="inputUsername" class="form-control" required autofocus></div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-form-label col-sm-2" for="inputPassword">Mot de passe</label>
+                            <div class="col-sm-10"><div class="custom-file"><input type="password" name="_password" id="inputPassword" class="form-control" required></div>
+                        </div>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                        <div class="col-12 my-3">
+                            <div class="text-right">
+                                <button class="btn-mycook">Se connecter</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            {#
-                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                See https://symfony.com/doc/current/security/remember_me.html
-
-                <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" name="_remember_me"> Remember me
-                    </label>
-                </div>
-            #}
-        </div>
+        </section>
     </form>
 
 {% endblock %}
