--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -216,7 +216,7 @@ img {
 
 /* Button */
 
-.mycook-btn {
+.btn-mycook {
     display: inline-block;
     min-width: 160px;
     height: 60px;
@@ -460,7 +460,7 @@ img {
         @media #{$breakpoint-xs} {
             height: 70px;
         }
-        .breaking-news {
+        .subtitle {
             position: relative;
             z-index: 1;
             .ticker {
@@ -473,15 +473,26 @@ img {
                 font-style: italic;
             }
         }
-        .top-social-info {
+        .command {
+            display: inline;
             a {
                 display: inline-block;
-                color: #b6b6b6;
+                color: #686868;
                 font-size: 13px;
                 margin-right: 30px;
-                &:last-child {
-                    margin-right: 0;
+                &:hover,
+                &:focus,
+                &.active {
+                    color: $hover-color;
                 }
+            }
+        }
+        .dropdown {
+            display: inline;
+            a {
+                color: #686868;
+                font-size: 13px;
+                margin-right: 20px;
                 &:hover,
                 &:focus,
                 &.active {
@@ -574,6 +585,30 @@ img {
     .nav-brand img {
         @media #{$breakpoint-xs} {
             max-width: 90px;
+        }
+    }
+}
+
+/* ----- Breadcrumb Area CSS ----- */
+
+.breadcrumb-area {
+    position: relative;
+    z-index: 10;
+    width: 92%;
+    height: 190px;
+    margin-left: 4%;
+    margin-right: 4%;
+    @media #{$breakpoint-xs} {
+        height: 120px;
+    }
+    .title {
+        h2 {
+            font-size: 30px;
+            margin-bottom: 0;
+            color: $white-color;
+            @media #{$breakpoint-xs} {
+                font-size: 24px;
+            }
         }
     }
 }
@@ -723,6 +758,213 @@ img {
                 color: $bg-default;
             }
         }
+    }
+}
+
+/* ----- Idea Recipe Area ----- */
+
+.list-idea-area {
+    position: relative;
+    z-index: 1;
+    padding-bottom: 30px;
+}
+
+.single-idea-area {
+    position: relative;
+    z-index: 1;
+    margin-bottom: 50px;
+    .thumb {
+        @include flex(0 0 100px);
+        max-width: 100px;
+        width: 100px;
+        height: 75px;
+        max-height: 75px;
+        padding-right: 20px;
+    }
+    .content {
+        span {
+            font-size: 12px;
+            display: block;
+            color: $bg-default;
+        }
+        a {
+            display: block;
+            h5 {
+                color: $text-color2;
+                font-size: 18px;
+                margin-bottom: 5px;
+                @include trans-duration(500ms);
+                @media #{$breakpoint-lg} {
+                    font-size: 16px;
+                }
+                &:hover,
+                &:focus {
+                    color: $bg-default;
+                }
+            }
+        }
+        a.btn {
+            display: inline-block !important;
+            padding: .25rem .25rem;
+            font-size: .675rem;
+            line-height: 1.1;
+            border-radius: .1rem;
+        }
+    }
+}
+
+/* ----- Recipe CSS ----- */
+
+.recipe-slider {
+    position: relative;
+    z-index: 1;
+    .owl-prev,
+    .owl-next {
+        background-color: transparent;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        color: $white-color;
+        top: 50%;
+        margin-top: -20px;
+        left: 4%;
+        position: absolute;
+        z-index: 10;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 600;
+        opacity: 0;
+        visibility: hidden;
+        @include trans-duration(500ms);
+        border-bottom: 3px solid $border-color;
+        @media #{$breakpoint-xs} {
+            font-size: 14px;
+        }
+    }
+    .owl-next {
+        left: auto;
+        right: 4%;
+    }
+    &:hover .owl-prev,
+    &:hover .owl-next {
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+.recipe-headline {
+    span {
+        font-size: 14px;
+        display: block;
+        color: #a4a4a4;
+        margin-bottom: 0;
+    }
+    h2 {
+        font-size: 36px;
+        color: $text-color2;
+        margin-bottom: 30px;
+        @media #{$breakpoint-xs} {
+            font-size: 24px;
+        }
+    }
+    .duration {
+        border-left: 3px solid $bg-default;
+        padding: 15px;
+        h6 {
+            font-size: 15px;
+            margin-bottom: 5px;
+            svg {
+                width: 32px;
+                height: 32px;
+                text-align: center;
+                padding-right: 5px;
+            }
+            strong {
+                font-size: 18px;
+                font-weight: 800;
+            }
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+}
+
+.recipe-ratings {
+    .rate {
+        margin-bottom: 30px;
+        svg {
+            width: 32px;
+            height: 32px;
+            /*filter: drop-shadow(0 0 1px #fbb710);*/
+        }
+        
+    }
+    .btn svg {
+        fill: white;
+        width: 32px;
+        height: 32px;
+        text-align: center;
+        padding-right: 5px;
+    }
+}
+
+.recipe-preparation-step {
+    position: relative;
+    z-index: 1;
+    margin-bottom: 50px;
+    h4 {
+        color: $text-color2;
+        @include flex(0 0 60px);
+        max-width: 60px;
+        width: 60px;
+        margin-bottom: 0;
+    }
+    p {
+        color: $text-color2;
+    }
+}
+
+.recipe-ingredients {
+    @media #{$breakpoint-md} {
+        margin-bottom: 80px;
+    }
+    @media #{$breakpoint-xs} {
+        margin-bottom: 80px;
+    }
+    h4 {
+        color: $text-color2;
+        margin-bottom: 30px;
+    }
+    .custom-checkbox .custom-control-label::before {
+        border-radius: 0;
+    }
+    .custom-control-label::before {
+        width: 30px;
+        height: 30px;
+        background-color: $bg-gray;
+    }
+    .custom-control {
+        padding-left: 2.5rem;
+        margin-bottom: 30px;
+        min-height: 35px;
+    }
+    .custom-control-label {
+        margin-bottom: 0;
+        padding-top: 5px;
+        padding-left:15px;
+        font-size: 16px;
+        font-weight: 600;
+        color: #2f2f2f;
+    }
+    .custom-control-label::after {
+        top: 10px;
+        left: 5px;
+        width: 20px;
+        height: 20px;
+    }
+    .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+        background-color: $bg-default;
     }
 }
 
