--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -29,6 +29,8 @@
             {% include 'include/_footer.html.twig' %}
         </footer>
 
+        {% include 'include/_toasts.html.twig' %}
+
         {% block java_scripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
