--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -190,6 +190,73 @@ img {
     }
 }
 
+.section-search {
+    position: relative;
+    z-index: 20;
+    form {
+        input {
+            width: 100%;
+            height: 60px;
+            background-color: $bg-gray;
+            font-size: 14px;
+            padding: 0 20px;
+            border: none;
+        }
+    }
+    .col-12 {
+        @media #{$breakpoint-md} {
+            margin-bottom: 30px;
+        }
+        @media #{$breakpoint-xs} {
+            margin-bottom: 15px;
+        }
+    }
+    select {
+        appearance: none;
+        border: 0;
+        outline: 0;
+        background: none;
+        color: inherit;
+        box-shadow: none;
+    }
+    select::-ms-expand {
+        display: none;
+    }
+    /* Custom Select wrapper */
+    .select {
+        position: relative;
+        display: flex;
+        /*width: min(20rem, 90vw);*/
+        width: 100%;
+        background: var(--background-select);
+        background-color: #eee;
+        border-radius: 0.25rem;
+        overflow: hidden;
+        // Select style
+        select {
+            flex: 1;
+            padding: 1em;
+            cursor: pointer;
+        }
+        // Arrow style
+        &::after {
+            content: "\25BC";
+            position: absolute;
+            right: 1rem;
+            top: 1rem;
+            transition: 0.25s all ease;
+            pointer-events: none; // IMPORTANT to click on arrow
+        }
+    }
+}
+
+input:focus,
+textarea:focus {
+    outline: none;
+    box-shadow: none;
+    border-color: transparent;
+}
+
 /* ScrollUp */
 
 #scrollUp {
@@ -291,6 +358,14 @@ img {
         height: 40px;
         line-height: 39px;
     }
+}
+
+a.btn {
+    display: inline-block !important;
+    padding: .25rem .25rem;
+    font-size: .675rem;
+    line-height: 1.1;
+    border-radius: .1rem;
 }
 
 
@@ -476,10 +551,6 @@ img {
         .command {
             display: inline;
             a.btn {
-                padding: .25rem .375rem;
-                font-size: .675rem;
-                line-height: 1.2;
-                border-radius: .1rem;
                 margin-right: 30px;
             }
         }
@@ -798,13 +869,6 @@ img {
                     color: $bg-default;
                 }
             }
-        }
-        a.btn {
-            display: inline-block !important;
-            padding: .25rem .25rem;
-            font-size: .675rem;
-            line-height: 1.1;
-            border-radius: .1rem;
         }
     }
 }
