--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -2,35 +2,41 @@
 
 {% block title %} - Les catégories{% endblock %}
 
-{% block content %}
+{% set header_commands %}
+    <a href="{{ path('category_create') }}" class="btn btn-secondary" data-toggle="olix-modal" data-target="#modalOlix">Ajouter une catégorie</a>
+{% endset %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <div class="float-right">
-            <a href="{{ path('category_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter une catégorie</a>
-        </div>
-    {% endif %}
+{% block content %}
 
     {% include 'include/_breadcrumb.html.twig' with {'title': 'Les Catégories'} only %}
 
     <section class="list-category-area section-padding-80">
         <div class="container">
             <div class="row">
-                {% for item in categories %}
+                {% for category in categories %}
                     <div class="col-6 col-md-4 col-lg-3">
                         <div class="single-category-area mb-30">
                             <div class="img-hover-zoom rounded-circle">
-                                <a href="{{ path('category_show', {'id': item.id}) }}">
-                                    <img src="{{ asset(uri_category~'/'~item.id~'.jpg') | imagine_filter('cat') }}">
+                                <a href="{{ path('category_show', {'id': category.id}) }}">
+                                    <img src="{{ asset(uri_category~'/'~category.id~'.jpg') | imagine_filter('cat') }}">
                                 </a>
                             </div>
                             <div class="category-title">
-                                <a href="{{ path('category_show', {'id': item.id}) }}"><h5>{{ item.name }}</h5></a>
+                                <a href="{{ path('category_show', {'id': category.id}) }}"><h5>{{ category.name }}</h5></a>
                             </div>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <div class="text-center">
+                                    <a href="{{ path('category_update', {'id': category.id}) }}" class="btn btn-secondary" data-toggle="olix-modal" data-target="#modalOlix">Modifier</a>
+                                    <a href="{{ path('category_delete', {'id': category.id}) }}" class="btn btn-secondary" data-toggle="olix-modal" data-target="#modalOlix">Supprimer</a>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
             </div>
         </div>
     </section>
+
+    {% include '@OlixBackOffice/Include/modal.html.twig' with { modal: { title: "Chargement du formulaire", class: 'modal-lg' } } %}
 
 {% endblock %}
