--- a/templates/recipe/edit.html.twig
+++ b/templates/recipe/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% form_theme form _self %}
 
@@ -61,40 +61,44 @@
 
 {% block title %} - Catégorie{% endblock %}
 
-{% block body %}
+{% set header_commands %}
+    {% if recipe.id %}
+        <a href="{{ path('recipe_delete', {'id': recipe.id}) }}" class="btn btn-secondary" data-toggle="olix-modal" data-target="#modalOlix">Supprimer la recette</a>
+    {% endif %}
+{% endset %}
 
-    <h1 class="my-4"><i class="fas fa-utensils"></i>&nbsp;Recettes</h1>
+{% block content %}
 
     {% if recipe.id %}
-        <div class="float-right">
-            <form method="post" action="{{ path('recipe_delete', {'id': recipe.id}) }}" onsubmit="return confirm('Suppression de cette recette ?');">
-                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ recipe.id) }}">
-                <button class="btn action btn-sm btn-danger"><i class="fas fa-trash"></i>&nbsp;Supprimer</button>
-            </form>
-        </div>
-        <h3 class="my-3"><i class="fas fa-edit"></i>&nbsp;{{ recipe.name }}</h3>
+        {% include 'include/_breadcrumb.html.twig' with {'title': recipe.name, 'image': asset(uri_recipe~'/'~recipe.id~'.jpg')} only %}
     {% else %}
-        <h3 class="my-3"><i class="fas fa-plus-circle"></i>&nbsp;Nouvelle recette</h3>
+        {% include 'include/_breadcrumb.html.twig' with {'title': 'Nouvelle recette'} only %}
     {% endif %}
 
-    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-        {{ form_widget(form) }}
-        <div class="text-right">
-            {% if recipe.id %}
-                <a class="btn btn-sm btn-secondary" href="{{ path('recipe_show', {'id': recipe.id}) }}">Retour</a>
-                <button class="btn btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</button>
-            {% else %}
-                <a class="btn btn-sm btn-secondary" href="{{ path('recipe_index') }}">Retour</a>
-                <button class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</button>
-            {% endif %}
+    <div class="section-padding-80">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    {{ form_start(form) }}
+                        {{ form_widget(form) }}
+                        <div class="text-right">
+                            {% if recipe.id %}
+                                <a class="btn btn-sm btn-secondary" href="{{ path('recipe_show', {'id': recipe.id}) }}">Retour</a>
+                                <button class="btn btn-info"><i class="fas fa-edit"></i>&nbsp;Modifier</button>
+                            {% else %}
+                                <a class="btn btn-sm btn-secondary" href="{{ path('recipe_index') }}">Retour</a>
+                                <button class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter</button>
+                            {% endif %}
+                        </div>
+                    {{ form_end(form) }}
+                </div>
+            </div>
         </div>
-    {{ form_end(form) }}
+    </div>
 
     {% include 'recipe/_create-ingredient.modal.html.twig' %}
 
+    {% include '@OlixBackOffice/Modal/base.html.twig' with { modal: { title: "Chargement du formulaire", class: 'modal-lg' } } %}
+
 {% endblock %}
 
-{% block javascripts %}
-    {{ parent() }}
-    {{ encore_entry_script_tags('recipe') }}
-{% endblock %}
