--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -2,13 +2,11 @@
 
 {% block title %} - Recettes{% endblock %}
 
-{% block content %}
+{% set header_commands %}
+    <a href="{{ path('recipe_create') }}" class="btn btn-secondary">Ajouter une recette</a>
+{% endset %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-        <div class="float-right">
-            <a href="{{ path('recipe_create') }}" class="btn btn-success"><i class="fas fa-plus"></i>&nbsp;Ajouter une recette</a>
-        </div>
-    {% endif %}
+{% block content %}
 
     {% include 'include/_breadcrumb.html.twig' with {'title': 'Les Recettes'} only %}
 
