--- a/templates/include/_footer.html.twig
+++ b/templates/include/_footer.html.twig
@@ -4,10 +4,7 @@
             <div class="footer-social-info text-right">
                 <a href="https://github.com/sabinus52/mycook"><i class="fab fa-github" aria-hidden="true"></i></a>
             </div>
-            <div class="footer-logo">
-                <a href="index.html"><img src="img/core-img/logo.png" alt=""></a>
-            </div>
-
+            <div class="footer-logo"></div>
             <p>Copyright &copy;{{ 'now'|date('Y') }} All rights reserved</p>
         </div>
     </div>
