--- a/templates/recipe/_list-one.html.twig
+++ b/templates/recipe/_list-one.html.twig
@@ -1,5 +1,5 @@
 <div class="col-12 col-sm-6 col-lg-4">
-    <div class="single-recipe-area mb-30">
+    <div class="single-recipe-area mb-30 wow zoomIn" data-wow-duration="1s" data-wow-delay="0.5s">
         <div class="img-hover-zoom">
             <img src="{{ asset(uri_recipe~'/'~item.id~'.jpg') | imagine_filter('thumb') }}" alt="">
             <div class="icon">
