--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -3,7 +3,9 @@
         <div class="container">
             <nav class="classy-navbar justify-content-between" id="deliciousNav">
 
-                <a class="nav-brand" href="index.html"><img src="{{ asset('apple-touch-icon.png') }}" alt=""></a>
+                <a class="nav-brand" href="{{ path('index_home') }}">
+                    <img src="{{ asset('apple-touch-icon.png') }}" alt="logo">
+                </a>
 
                 <div class="classy-navbar-toggler">
                     <span class="navbarToggler"><span></span><span></span><span></span></span>
